security manager to server.sh