@@ -20,5 +20,6 @@ fi
 
 java -cp "$basepath"/server.jar:"$basepath"/shared.jar \
   -Djava.security.policy="$basepath"/policy \
+  -Djava.security.manager \
   -Djava.rmi.server.hostname="$IPADDR" \
   ca.polymtl.inf8480.tp2.server.Server
